--- a/en/index.html
+++ b/en/index.html
@@ -74,7 +74,7 @@
 							<a class="nav-link" href="/index.html">简体中文</a>
 						</li>
 <li class="nav-item">
-							<a class="nav-link" href="https://git.wpbkj.com">International Version (some parts of China may not be accessible)</a>
+							<a class="nav-link" href="https://wpbkj.gitee.io/">Chinese Version (may not be accessible in some foreign regions)</a>
 						</li>
 						
 					</ul>
@@ -121,7 +121,7 @@
 				<div class="col-md-6">
 					<ul class="nav nav-footer justify-content-end">
 						<li class="nav-item">
-							<a class="nav-link" href="/index.html">首页</a>
+							<a class="nav-link" href="/index.html">Home</a>
 						</li>
 													
 				</div>
