--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 							<a class="nav-link" href="/en/">ENGLISH</a>
 						</li>
 <li class="nav-item">
-							<a class="nav-link" href="https://git.wpbkj.com">国际版（国内部分地区可能无法访问）</a>
+							<a class="nav-link" href="https://wpbkj.gitee.io/">中国版（国外部分地区可能无法访问）</a>
 						</li>
 						
 					</ul>
